--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,14 +1,14 @@
 <div class="items-sell-contents">
   <header class="items-sell-header">
     <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
-
+    
   </header>
   <div class="items-sell-main">
     <h2 class="items-sell-title">商品の情報を入力</h2>
-    <%= form_with model: @item, local: true do |f| %>
+    <%= form_with model: @item , local: true do |f| %>
 
     <%# インスタンスを渡して、エラー発生時にメッセージが表示されるようにしましょう。%>
-      <%#= render 'shared/error_messages', model: f.object %>
+      <%= render 'shared/error_messages', model: f.object %>
     <%# //インスタンスを渡して、エラー発生時にメッセージが表示されるようにしましょう。%>
 
       <%# 商品画像 %>
@@ -104,13 +104,13 @@
           <div class="price-content">
             <span>販売手数料 (10%)</span>
             <span>
-              <span id='add-tax-price'></span>円
+              <span id="add-tax-price"></span>円
             </span>
           </div>
           <div class="price-content">
             <span>販売利益</span>
             <span>
-              <span id='profit'></span>円
+              <span id="profit"></span>円
             </span>
           </div>
         </div>
