--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,32 +129,32 @@
     <ul class='item-lists'>
       <% if @items.present? %>
         <% @items.each do |t| %>
-        <li class='list'>
-          <%= link_to "#" do %>
-          <div class='item-img-content'>
-            <%= image_tag t.image, class: "item-img" %>
+          <li class='list'>
+            <%= link_to item_path(t.id) do %>
+              <div class='item-img-content'>
+                <%= image_tag t.image, class: "item-img" %>
 
-            <%# 商品が売れていればsold outを表示しましょう %>
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div>
-            <%# //商品が売れていればsold outを表示しましょう %>
+                <%# 商品が売れていればsold outを表示しましょう %>
+                <div class='sold-out'>
+                  <span>Sold Out!!</span>
+                </div>
+                <%# //商品が売れていればsold outを表示しましょう %>
 
-          </div>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              <%= t.item_title %>
-            </h3>
-            <div class='item-price'>
-              <span><%= t.price %>円<br><%= Deliveryday.find(t.delivery_charge_id).name %></span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
               </div>
-            </div>
-          </div>
-          <% end %>
-        </li>
+              <div class='item-info'>
+                <h3 class='item-name'>
+                  <%= t.item_title %>
+                </h3>
+                <div class='item-price'>
+                  <span><%= t.price %>円<br><%= Deliveryday.find(t.delivery_day_id).name %></span>
+                  <div class='star-btn'>
+                    <%= image_tag "star.png", class:"star-icon" %>
+                    <span class='star-count'>0</span>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          </li>
         <% end %>
       <% else %>
         <li class='list'>
