--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -32,7 +32,7 @@
       <% end%>
     <% else %>
       <div class="item-explain-box">
-        <span><%= "商品説明" %></span>
+        <span><%= @item.item_concept %></span>
       </div>
       <table class="detail-table">
         <tbody>
