--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,29 +6,31 @@
       購入内容の確認
     </h1>
     <%# 購入内容の表示 %>
-    <div class='buy-item-info'>
-      <%= image_tag "item-sample.png", class: 'buy-item-img' %>
-      <div class='buy-item-right-content'>
-        <h2 class='buy-item-text'>
-          <%= "商品名" %>
-        </h2>
-        <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= '999,999,999' %></p>
-          <p class='item-price-sub-text'><%= '配送料負担' %></p>
+    <% @items.each do |t| %>
+      <div class='buy-item-info'>
+        <%= image_tag t.image, class: 'buy-item-img' %>
+        <div class='buy-item-right-content'>
+          <h2 class='buy-item-text'>
+            <%= t.item_title %>
+          </h2>
+          <div class='buy-item-price'>
+            <p class='item-price-text'>¥<%= t.price %></p>
+            <p class='item-price-sub-text'><%= Deliverycharge.find(t.delivery_charge_id).name %></p>
+          </div>
         </div>
       </div>
-    </div>
     <%# /購入内容の表示 %>
 
     <%# 支払額の表示 %>
-    <div class='item-payment'>
-      <h1 class='item-payment-title'>
-        支払金額
-      </h1>
-      <p class='item-payment-price'>
-        ¥<%= "販売価格" %>
-      </p>
-    </div>
+      <div class='item-payment'>
+        <h1 class='item-payment-title'>
+          支払金額
+        </h1>
+        <p class='item-payment-price'>
+          ¥<%= t.price %>
+        </p>
+      </div>
+    <% end %>
     <%# /支払額の表示 %>
 
     <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
