--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,12 +133,12 @@
             <%= link_to item_path(t.id) do %>
               <div class='item-img-content'>
                 <%= image_tag t.image, class: "item-img" %>
-
-                <%# 商品が売れていればsold outを表示しましょう %>
-                <div class='sold-out'>
-                  <span>Sold Out!!</span>
-                </div>
-                <%# //商品が売れていればsold outを表示しましょう %>
+                
+                <% if t.sold_out? %>
+                  <div class='sold-out'>
+                    <span>Sold Out!!</span>
+                  </div>
+                <% end %>
 
               </div>
               <div class='item-info'>
