--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,7 +19,7 @@
         ￥ <%= @item.price %>
       </span>
       <span class="item-postage">
-        <%= Deliveryday.find(@item.delivery_day_id).name %>
+        <%= Deliverycharge.find(@item.delivery_charge_id).name %>
       </span>
     </div>
     <% if user_signed_in? && !@item.sold_out?%>
